k8s/apps/raw/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: demo-raw
  labels:
    app.kubernetes.io/part-of: demo
    deploy-method: raw-yaml
