k8s/apps/raw/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo
  namespace: demo-raw
spec:
  type: ClusterIP
  selector:
    app: demo
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
